# TIPE2

./: tipe2.cabal
presentation/: Makefile  graph.tex  presentation.bib  presentation.tex
src/: Environment.lhs  Evaluation.lhs  Expression.lhs  Main.lhs  PSearch.lhs  Pretty.hs  ProofBase.lhs  ProofSearch.lhs  Substitution.lhs  Term.lhs  Util.hs  WSearch.lhs
