name:                tipe2
version:             0.1.0.0
author:              Rafbill
maintainer:          rafaelbocquet+github@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable tipe2
  main-is:             Main.lhs
  other-modules:       Term,
                       Environment,
                       Evaluation,
                       ProofSearch
  build-depends:       base >=4.6,
                       containers,
                       mtl,
                       transformers,
                       either,
                       ansi-terminal,
                       dotgen
  hs-source-dirs:      src
  default-language:    Haskell2010